[gd_scene load_steps=9 format=3 uid="uid://bwxtjjg2ajfsj"]

[ext_resource type="AudioStream" uid="uid://cl5mq7w7a8dgd" path="res://media/game-over.mp3" id="2_oepgo"]

[ext_resource type="Script" path="res://src/Interface/endgame.gd" id="1_dny7r"]
[ext_resource type="Texture2D" uid="uid://d11p4jdyec8va" path="res://media/gobgex.png" id="2_way1i"]
[ext_resource type="Texture2D" uid="uid://c1edqfujya7wb" path="res://media/gorestartex.png" id="3_648aj"]
[ext_resource type="Texture2D" uid="uid://cuwdt8hhb27uc" path="res://media/gomainmenuex.png" id="4_fjtr0"]
[ext_resource type="FontFile" uid="uid://c2h6b05ye5so6" path="res://fonts/Daydream.ttf" id="5_3p474"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g3lli"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tvsof"]

[sub_resource type="LabelSettings" id="LabelSettings_qcm3s"]
font = ExtResource("5_3p474")
font_size = 61
font_color = Color(0.580392, 0.47451, 0.321569, 1)
outline_size = 14
outline_color = Color(0.266667, 0.160784, 0.0784314, 1)

[node name="Endgame" type="Node"]
script = ExtResource("1_dny7r")

[node name="Gobgex" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("2_way1i")

[node name="PlayAgain" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -296.0
offset_top = 209.0
offset_right = 292.0
offset_bottom = 359.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_g3lli")
icon = ExtResource("3_648aj")
flat = true

[node name="MainMenu" type="Button" parent="."]
offset_left = 638.0
offset_top = 923.0
offset_right = 1256.0
offset_bottom = 1040.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_tvsof")
icon = ExtResource("4_fjtr0")
flat = true

[node name="Score_end" type="Label" parent="."]
texture_filter = 1
offset_left = 454.0
offset_top = 242.0
offset_right = 1423.0
offset_bottom = 336.0
text = "Score : 35138"
label_settings = SubResource("LabelSettings_qcm3s")
horizontal_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_oepgo")

[connection signal="mouse_entered" from="PlayAgain" to="." method="_on_play_again_mouse_entered"]
[connection signal="mouse_exited" from="PlayAgain" to="." method="_on_play_again_mouse_exited"]
[connection signal="pressed" from="PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="mouse_entered" from="MainMenu" to="." method="_on_main_menu_mouse_entered"]
[connection signal="mouse_exited" from="MainMenu" to="." method="_on_main_menu_mouse_exited"]
[connection signal="pressed" from="MainMenu" to="." method="_on_main_menu_pressed"]
